# my-old-stuff

Schule/Datenbank/: Unit1.lfm  Unit1.lrs  Unit1.pas  Unit1.ppu  Unit2.lfm  Unit2.lrs  Unit2.pas  Unit2.ppu  project1.lpi  project1.lpr
Schule/Kasse/: Doxyfile  Kasse  Kasse.kdevelop  Kasse.kdevelop.pcs  Kasse.pro  Makefile  form3.ui  form3.ui.h  main.cpp
Schule/PoingPing/: app.pas  upp.pas
Schule/graph/: qugraoh.pas
Schule/singra/: grap.pas
Studium/DeP_HAtaGo/: CMakeLists.txt  main.hs
Studium/GoASM/: Deckblatt.odt  goasm.asm  goasm.asm_save_29.9.21_35.asm  goasm.logo  goasm.odt
Studium/KI-Stammbaum/: baum.plog  gradsuche.plog  load.plog  teil1.plog
Studium/Seminare/: 22b.c  A2c.c  a1.c  a21_2.c  sem6.c  testA21.c
Studium/SysP/: Makefile  esoteri.c  esoteri.h  ioctl_esoteric.h  theReader.cpp  theWriter.cpp
Studium/fraktaleGebirge/: Drawable.cpp  Drawable.h  Fractal.cpp  Fractal.h  OpenGL.cpp  OpenGL.h  Point.cpp  Point.h  RotTrans.cpp  RotTrans.h  Triangle.cpp  Triangle.h  main.cpp
Studium/littleGo/: .project  readme.txt
Studium/swt/: Klassen.h  swt.cpp
Studium/upn-rechner/: main.c
funWithSDL1.2/Loader/: main.cpp
funWithSDL1.2/ProjectAlpha/: projektalpha.cpp
funWithSDL1.2/bacchikoi/: main.cpp
funWithSDL1.2/rendererTest/: main.cpp
funWithSDL1.3/SpriteViewerSDL/: main.cpp
goodThings/ASCIITabelle/: ASCII-Tabelle.cpp  Code.txt  Sonderzeichen.h
goodThings/BB2CON/: bb2con.cpp
goodThings/FeldTest/: feldtest.cpp
goodThings/PongBomb/: Pong Bomb.bb
goodThings/ShootTheBall2/: Stb.bb
goodThings/SlLP/: SlLP.cpp
goodThings/WSSW/: StdAfx.h  (+15 more)
(+202 files in other folders)
